refactor(course): DTO 구조 개편 및 생성 로직 통합
- Class 기반 DTO를 Record로 전면 교체 및 Converter 제거
- 매핑 로직(toEntity, from)을 DTO 내부로 이관하여 응집도 향상
- AI 및 DIY 코스 생성 로직을 하나로 통합 (createCourse)
- CourseDetailResponse 내 Inner Record 도입으로 구조 최적화