@@ -1,6 +1,5 @@
 package umc.catchy.domain.course.service;
 
-import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.Collections;
 import java.util.Objects;
@@ -27,7 +26,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 import umc.catchy.domain.activetime.domain.ActiveTime;
 import umc.catchy.domain.category.dao.CategoryRepository;
-import umc.catchy.domain.course.converter.CourseConverter;
 import umc.catchy.domain.course.dto.response.CourseRecommendationResponse;
 import umc.catchy.domain.course.dto.response.PopularCourseInfoResponse;
 import umc.catchy.domain.course.util.LocationUtils;
@@ -36,7 +34,7 @@ import umc.catchy.domain.course.domain.Course;
 import umc.catchy.domain.course.domain.CourseType;
 import umc.catchy.domain.course.dto.request.CourseCreateRequest;
 import umc.catchy.domain.course.dto.request.CourseUpdateRequest;
-import umc.catchy.domain.course.dto.response.CourseInfoResponse;
+import umc.catchy.domain.course.dto.response.CourseDetailResponse;
 import umc.catchy.domain.course.dto.response.GptCourseInfoResponse;
 import umc.catchy.domain.courseReview.dao.CourseReviewRepository;
 import umc.catchy.domain.mapping.memberCourse.dao.MemberCourseRepository;
@@ -55,7 +53,6 @@ import umc.catchy.domain.mapping.placeVisit.dao.PlaceVisitRepository;
 import umc.catchy.domain.mapping.placeVisit.domain.PlaceVisit;
 import umc.catchy.domain.member.dao.MemberRepository;
 import umc.catchy.domain.member.domain.Member;
-import umc.catchy.domain.place.converter.PlaceConverter;
 import umc.catchy.domain.place.dao.PlaceRepository;
 import umc.catchy.domain.place.domain.Place;
 import umc.catchy.domain.placeReview.dao.PlaceReviewRepository;
@@ -70,8 +67,6 @@ import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
-
-import static umc.catchy.global.common.constants.FcmConstants.*;
 
 @Service
 @EnableAsync
@@ -113,16 +108,17 @@ public class CourseService {
     }
 
     //코스의 각 장소 별 간단한 정보 받아오기
-    private List<CourseInfoResponse.getPlaceInfoOfCourseDTO> getPlaceListOfCourse(Course course, Member member) {
+    private List<CourseDetailResponse.CoursePlaceInfo> getPlaceListOfCourse(Course course, Member member) {
         return placeCourseRepository.findAllByCourse(course).stream()
                 .map(placeCourse -> {
                     // 멤버의 장소 방문 여부 확인
                     Boolean isVisited = placeVisitRepository.findByPlaceAndMember(placeCourse.getPlace(), member)
                             .map(PlaceVisit::isVisited)
-                            .orElse(false); // null -> 기본값 false
-                    return PlaceConverter.toPlaceInfoOfCourseDTO(placeCourse.getPlace(), isVisited);
+                            .orElse(false);
+
+                    return CourseDetailResponse.CoursePlaceInfo.of(placeCourse.getPlace(), isVisited);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     //Course : 리뷰 개수 로직
@@ -152,14 +148,15 @@ public class CourseService {
     }
 
     //코스의 상세 정보 받아오기
-    public CourseInfoResponse.getCourseInfoDTO getCourseDetails(Long courseId) {
+    public CourseDetailResponse getCourseDetails(Long courseId) {
         Course course = getCourse(courseId);
         Long memberId = SecurityUtil.getCurrentMemberId();
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.MEMBER_NOT_FOUND));
 
-        List<CourseInfoResponse.getPlaceInfoOfCourseDTO> placeListOfCourse = getPlaceListOfCourse(course, member);
-        return CourseConverter.toCourseInfoDTO(course, calculateNumberOfReviews(course), getRecommendTimeToString(course), getBookmarks(course, member), placeListOfCourse);
+        List<CourseDetailResponse.CoursePlaceInfo> placeListOfCourse = getPlaceListOfCourse(course, member);
+
+        return CourseDetailResponse.from(course, calculateNumberOfReviews(course), getBookmarks(course, member), placeListOfCourse);
     }
 
     // 현재 사용자의 코스를 불러옴
@@ -184,81 +181,57 @@ public class CourseService {
     }
 
     // 코스 수정
-    public CourseInfoResponse.getCourseInfoDTO updateCourse(Long courseId, CourseUpdateRequest request) {
+    public CourseDetailResponse updateCourse(Long courseId, CourseUpdateRequest request) {
         Course course = getCourse(courseId);
-
         Long memberId = SecurityUtil.getCurrentMemberId();
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.MEMBER_NOT_FOUND));
 
-        // 사용자가 가지고 있는 코스인지 검증
         if (!course.getMember().equals(member)) {
             throw new GeneralException(ErrorStatus.COURSE_INVALID_MEMBER);
         }
 
-        // 코스 이름 수정
-        if (!request.getCourseName().isEmpty()) {
-            course.setCourseName(request.getCourseName());
-        }
+        if (!request.getCourseName().isEmpty()) course.setCourseName(request.getCourseName());
+        if (!request.getCourseDescription().isEmpty()) course.setCourseDescription(request.getCourseDescription());
 
-        // 코스 설명 수정
-        if (!request.getCourseDescription().isEmpty()) {
-            course.setCourseDescription(request.getCourseDescription());
-        }
-
-        // 코스 이미지 수정
         if (request.getCourseImage() != null) {
             String originCourseImageUrl = course.getCourseImage();
-
-            if (!originCourseImageUrl.isEmpty())
-                amazonS3Manager.deleteImage(originCourseImageUrl);
+            if (!originCourseImageUrl.isEmpty()) amazonS3Manager.deleteImage(originCourseImageUrl);
 
             MultipartFile newCourseImage = request.getCourseImage();
-
             String keyName = "course-images/" + UUID.randomUUID();
-            String newCourseImageUrl = amazonS3Manager.uploadFile(keyName, newCourseImage);
-
-            course.setCourseImage(newCourseImageUrl);
+            course.setCourseImage(amazonS3Manager.uploadFile(keyName, newCourseImage));
         }
 
-        // 코스 장소 수정
         if (!request.getPlaceIds().isEmpty()) {
             List<Long> placeIds = request.getPlaceIds();
-
-            // 기존의 장소는 제거
             List<PlaceCourse> originPlaces = placeCourseRepository.findAllByCourse(course);
             placeCourseRepository.deleteAll(originPlaces);
 
-            // 코스에 추가
             IntStream.range(0, placeIds.size()).forEach(index -> {
                 Long placeId = placeIds.get(index);
                 Place place = placeRepository.findById(placeId)
                         .orElseThrow(() -> new GeneralException(ErrorStatus.PLACE_NOT_FOUND));
 
-                // List의 Index를 기반으로 코스 순서 결정
                 PlaceCourse newPlaceCourse = PlaceCourse.builder()
                         .course(course)
                         .place(place)
                         .placeOrder(index + 1)
                         .build();
-
                 placeCourseRepository.save(newPlaceCourse);
             });
         }
 
-        // 추천 시간대 수정
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("HH:mm");
-
         if (!request.getRecommendTimeStart().isEmpty()) {
             course.setRecommendTimeStart(LocalTime.parse(request.getRecommendTimeStart(), formatter));
         }
-
         if (!request.getRecommendTimeEnd().isEmpty()) {
             course.setRecommendTimeEnd(LocalTime.parse(request.getRecommendTimeEnd(), formatter));
         }
 
-        List<CourseInfoResponse.getPlaceInfoOfCourseDTO> placeListOfCourse = getPlaceListOfCourse(course, member);
-        return CourseConverter.toCourseInfoDTO(course, calculateNumberOfReviews(course), getRecommendTimeToString(course), getBookmarks(course, member), placeListOfCourse);
+        List<CourseDetailResponse.CoursePlaceInfo> placeListOfCourse = getPlaceListOfCourse(course, member);
+        return CourseDetailResponse.from(course, calculateNumberOfReviews(course), getBookmarks(course, member), placeListOfCourse);
     }
 
     public void deleteCourse(Long courseId) {
@@ -282,29 +255,22 @@ public class CourseService {
         courseRepository.delete(course);
     }
 
-    // 코스 생성(DIY)
-    public CourseInfoResponse.getCourseInfoDTO createCourseByDIY(CourseCreateRequest request) {
+    public CourseDetailResponse createCourse(CourseCreateRequest request) {
         Long memberId = SecurityUtil.getCurrentMemberId();
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.MEMBER_NOT_FOUND));
 
-        // 이미지 불러오기
+        // 이미지 업로드
         String courseImageUrl = null;
-
-        if (request.getCourseImage() != null) {
-            MultipartFile courseImage = request.getCourseImage();
-
+        if (request.courseImage() != null) {
             String keyName = "course-images/" + UUID.randomUUID();
-            courseImageUrl = amazonS3Manager.uploadFile(keyName, courseImage);
+            courseImageUrl = amazonS3Manager.uploadFile(keyName, request.courseImage());
         }
 
-        // 코스 생성
-        Course course = CourseConverter.toCourse(request, courseImageUrl, member);
-        course.setCourseType(CourseType.DIY);
+        Course course = request.toEntity(member, courseImageUrl);
 
-        List<Long> placeIds = request.getPlaceIds();
-
-        // 평점 계산
+        // 평점 계산 (초기 생성 시)
+        List<Long> placeIds = request.placeIds();
         Double averageRating = placeIds.stream()
                 .map(placeId -> placeRepository.findById(placeId)
                         .orElseThrow(() -> new GeneralException(ErrorStatus.PLACE_NOT_FOUND))
@@ -316,32 +282,32 @@ public class CourseService {
 
         course.setRating(Math.round(averageRating * 10) / 10.0);
 
+        // 장소 매핑 저장
+        courseRepository.save(course);
+
+        Course finalCourse = course;
         IntStream.range(0, placeIds.size()).forEach(index -> {
             Long placeId = placeIds.get(index);
             Place place = placeRepository.findById(placeId)
                     .orElseThrow(() -> new GeneralException(ErrorStatus.PLACE_NOT_FOUND));
 
-            // List의 Index를 기반으로 코스 순서 결정
             PlaceCourse newPlaceCourse = PlaceCourse.builder()
-                    .course(course)
+                    .course(finalCourse)
                     .place(place)
                     .placeOrder(index + 1)
                     .build();
-
             placeCourseRepository.save(newPlaceCourse);
         });
 
-        // MemberCourse 생성
+        // MemberCourse 매핑
         MemberCourse memberCourse = MemberCourse.builder()
                 .course(course)
                 .member(member)
                 .build();
-
         memberCourseRepository.save(memberCourse);
-        courseRepository.save(course);
 
-        List<CourseInfoResponse.getPlaceInfoOfCourseDTO> placeListOfCourse = getPlaceListOfCourse(course, member);
-        return CourseConverter.toCourseInfoDTO(course, calculateNumberOfReviews(course), getRecommendTimeToString(course), false, placeListOfCourse);
+        List<CourseDetailResponse.CoursePlaceInfo> placeListOfCourse = getPlaceListOfCourse(course, member);
+        return CourseDetailResponse.from(course, calculateNumberOfReviews(course), false, placeListOfCourse);
     }
 
     public List<Place> getRecommendedPlaces(List<String> regionList, List<Long> preferredCategoryIds, Long memberId, int maxPlaces) {
@@ -761,7 +727,9 @@ public class CourseService {
         }
     }
 
-    public List<PopularCourseInfoResponse> getPopularCourses(){
-        return CourseConverter.toPopularCourseInfoResponseList(courseRepository.findPopularCourses());
+    public List<PopularCourseInfoResponse> getPopularCourses() {
+        return courseRepository.findPopularCourses().stream()
+                .map(PopularCourseInfoResponse::from)
+                .toList();
     }
 }
